--- a/package.json
+++ b/package.json
@@ -10,23 +10,33 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.2",
+    "@radix-ui/react-accordion": "^1.2.12",
+    "@radix-ui/react-avatar": "^1.1.11",
+    "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-separator": "^1.1.7",
-    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-slot": "^1.2.4",
+    "@splinetool/react-spline": "^4.1.0",
+    "@splinetool/runtime": "^1.12.5",
     "@studio-freight/lenis": "^1.0.42",
     "@tabler/icons-react": "^3.35.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "framer-motion": "^12.23.24",
+    "framer-motion": "^12.23.25",
     "gsap": "^3.13.0",
     "lenis": "^1.3.15",
     "lucide-react": "^0.542.0",
-    "next": "15.5.2",
+    "motion": "^12.23.25",
+    "next": "^15.5.2",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-icons": "^5.5.0",
     "react-use-measure": "^2.1.7",
     "resend": "^6.0.2",
+    "simplex-noise": "^4.0.3",
     "sonner": "^2.0.7",
     "swiper": "^10.3.1",
     "tailwind-merge": "^3.3.1",
