--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.4",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.4.2",
     "@splinetool/react-spline": "^4.1.0",
     "@splinetool/runtime": "^1.12.5",
     "@studio-freight/lenis": "^1.0.42",
@@ -31,6 +33,7 @@
     "motion": "^12.23.25",
     "next": "15.5.7",
     "next-themes": "^0.4.6",
+    "ogl": "^1.0.11",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
